[project]
name = "streamfeed"
version = "0.1.0"
description = "Fullscreen news feed about games, AI, and programming."
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
